tests/invalid/loops/too_few_for_clauses.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    for (i: i64 = 2; i < 3)
        3;
    return 0;
}